# ebac-bookstore-apii

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject-old.toml  pyproject.toml  requirements.txt  test
.github/workflows/: heroku-deploy.yml  workflow-pr.yml
bd_/: manage.py
bd_/bd_/: asgi.py  settings.py  urls.py  wsgi.py
bookstore/: settings.py  urls.py
