[tool.poetry]
name = "bookstore"
version = "0.1.9"
description = "Docker"
authors = ["Patrick Passarella <pshaggy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
paramiko = "^3.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
