[tool.poetry]
name = "bookstore"
version = "0.1.9"
description = "Docker"
authors = ["Patrick Passarella <pshaggy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.18"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
gitpython = "^3.1.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"